--- a/action.yml
+++ b/action.yml
@@ -12,17 +12,14 @@ inputs:
     description: 'User key for access vpn'
     required: false
     default: ''
-  PING_URL:
-    description: 'For check success or fail'
-    required: true
-    default: '127.0.0.1'
   FILE_OVPN:
     description: 'Location file open vpn'
     required: true
     default: './config.ovpn'
-outputs:
-  STATUS:
-    description: 'Status for check connect vpn'
+  TIMEOUT:
+    description: 'VPN connection timout in ms'
+    required: false
+    default: '15000'
 runs:
   using: 'node12'
   main: 'dist/index.js'
